[package]
name = "ishikari"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "A distributed cache proxy for serving tiles from PMTiles archives in object storage"
repository = "https://github.com/MIERUNE/ishikari"

[dependencies]
anyhow = "1"
axum = "0.8"
brotli = "8"
bytes = "1"
chitchat = "0.10"
clap = { version = "4.6", features = ["derive", "env"] }
fast_hilbert = "2"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-ng"] }
internment = { version = "0.8", default-features = false, features = ["arc"] }
moka = { version = "0.12", features = ["sync"] }
object_store = { version = "0.13", features = ["aws", "gcp", "http"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = "2"
url = "2"
zstd = "0.13"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
