[workspace]
members = ["ishikari", "ishikari-sim", "ishikari-terrain"]
# `cargo run -- ...` at the workspace root runs the server (README quick start).
default-members = ["ishikari"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
brotli = "8"
bytes = "1"
chitchat = "0.11"
clap = { version = "4.6", features = ["derive", "env"] }
fast_hilbert = "2"
fast-mvt = { version = "0.5", default-features = false, features = ["writer"] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
httpdate = "1"
image = { version = "0.25", default-features = false, features = ["webp", "jpeg"] }
internment = { version = "0.8", default-features = false, features = ["arc"] }
ishikari-terrain = { path = "ishikari-terrain" }
mlt-core = { version = "0.12", default-features = false }
moka = { version = "0.12", features = ["sync", "future"] }
object_store = { version = "0.14", features = ["aws", "gcp", "http"] }
prometheus = "0.14"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
same-file = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = "2"
url = "2"
webp = { version = "0.3", default-features = false }
zstd = "0.13"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
